finish testing inventories
