# internal/model/inventory.go
@@ -7,7 +7,7 @@ import (
 )
 
 type Inventory struct {
-	bun.BaseModel `bun:"categories"                                  swaggerignore:"true"`
+	bun.BaseModel `bun:"inventories"                                 swaggerignore:"true"`
 	ID            int       `bun:",pk,autoincrement"                           example:"1"          json:"id"`
 	CreatedAt     time.Time `bun:",nullzero,notnull,default:current_timestamp" swaggerignore:"true"`
 	UpdatedAt     time.Time `bun:",nullzero,notnull,default:current_timestamp" swaggerignore:"true"`
